Closed Bug 1185686 Opened 9 years ago Closed 9 years ago

Fix Atomics.h ifdefs for clang-cl

Categories

(Core :: MFBT, defect)

41 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox42 --- fixed

People

(Reporter: away, Assigned: away)

References

Details

Attachments

(1 file)

clang-cl builds are an oddity in that both __clang__ and _MSC_VER are defined. 

Currently we hit:
 # error "Atomic compiler intrinsics are not supported on your platform"

We should be able to just send clang-cl builds down the C++11 atomics path.
Attached patch patchSplinter Review
Assignee: nobody → dmajor
Attachment #8636208 - Flags: review?(nfroyd)
Attachment #8636208 - Flags: review?(nfroyd) → review+
Thanks!
https://hg.mozilla.org/mozilla-central/rev/649648c5f257
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: