Bug 1185686: Fix Atomics.h ifdefs for clang-cl. r=froydnj